--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/BaseButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/Buttons/BaseButtonStyles.xaml
@@ -50,8 +50,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         <ContentPresenter
                             Content="{TemplateBinding Content}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center" />
+                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
 
                     </Border>
                 </ControlTemplate>
