--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/CloseSprintConfirmation/SprintCloseConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/CloseSprintConfirmation/SprintCloseConfirmationWindow.xaml
@@ -17,7 +17,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <customControls:OkCancelWindow
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.StartSprintConfirmation.StartSprintConfirmationWindow"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.CloseSprintConfirmation.SprintCloseConfirmationWindow"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -25,19 +25,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
-    xmlns:startSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.StartSprintConfirmation"
+    xmlns:closeSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.CloseSprintConfirmation"
 
     mc:Ignorable="d"
     Title="{Binding Title}"
     WindowStartupLocation="CenterOwner"
-    d:DataContext="{d:DesignInstance startSprintConfirmation:StartSprintConfirmationViewModel}">
+    ResizeMode="CanResizeWithGrip"
+    d:DataContext="{d:DesignInstance closeSprintConfirmation:SprintCloseConfirmationViewModel}">
 
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/StandardControlStyles.xaml" />
-                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/StartIconStyles.xaml" />
+                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/CloseIconStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/OkCancelWindowStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
@@ -50,7 +51,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </Window.Style>
 
     <customControls:OkCancelWindow.TitleIcon>
-        <customControls:GenericIcon Style="{StaticResource StartIconStyle}"/>
+        <customControls:GenericIcon Style="{StaticResource CloseIconStyle}" />
     </customControls:OkCancelWindow.TitleIcon>
 
     <Grid>
@@ -63,55 +64,39 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock
-            Grid.Row="0"
-            Grid.Column="0"
-            Text="Estimated Story Points:"
-            VerticalAlignment="Top" />
-
-        <TextBlock
-            Grid.Row="0"
-            Grid.Column="2"
-            Text="{Binding EstimatedStoryPoints, StringFormat=standard}"
-            MinHeight="35"
-            VerticalAlignment="Center"
-            FontSize="20"/>
-
         <Label
-            Grid.Row="1"
+            Grid.Row="0"
             Grid.Column="0"
-            Content="_Commitment Story Points:"
+            Content="_Actual Story Points:"
             VerticalAlignment="Center"
-            Target="TextBoxCommitmentStoryPoints" />
+            Target="TextBoxActualStoryPoints" />
 
         <TextBox
-            Grid.Row="1"
+            Grid.Row="0"
             Grid.Column="2"
-            x:Name="TextBoxCommitmentStoryPoints"
-            Text="{Binding CommitmentStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
+            x:Name="TextBoxActualStoryPoints"
+            Text="{Binding ActualStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
             TabIndex="1"
-            Margin="0 3 0 0"
             FontSize="20" />
 
         <Label
-            Grid.Row="2"
+            Grid.Row="1"
             Grid.Column="0"
-            Content="Sprint's _Goal:"
+            Content="_Comments:"
             VerticalAlignment="Center"
-            Target="TextBoxSprintGoal" />
+            Target="TextBoxComments" />
 
         <TextBox
-            Grid.Row="2"
+            Grid.Row="1"
             Grid.Column="2"
-            x:Name="TextBoxSprintGoal"
-            Text="{Binding SprintGoal}"
-            TabIndex="2"
+            x:Name="TextBoxComments"
+            Text="{Binding Comments}"
             Style="{StaticResource MultilineTextBoxStyle}"
-            Margin="0 20 0 0" />
+            Margin="0 20 0 0"
+            TabIndex="2" />
     </Grid>
 
 </customControls:OkCancelWindow>
