--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/StartSprintConfirmation/SprintStartConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/StartSprintConfirmation/SprintStartConfirmationWindow.xaml
@@ -17,7 +17,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <customControls:OkCancelWindow
-    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.CloseSprintConfirmation.CloseSprintConfirmationWindow"
+    x:Class="DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.StartSprintConfirmation.SprintStartConfirmationWindow"
 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -25,20 +25,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Converters"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
-    xmlns:closeSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.CloseSprintConfirmation"
+    xmlns:startSprintConfirmation="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.SprintsArea.StartSprintConfirmation"
 
     mc:Ignorable="d"
     Title="{Binding Title}"
     WindowStartupLocation="CenterOwner"
-    ResizeMode="CanResizeWithGrip"
-    d:DataContext="{d:DesignInstance closeSprintConfirmation:CloseSprintConfirmationViewModel}">
+    d:DataContext="{d:DesignInstance startSprintConfirmation:SprintStartConfirmationViewModel}">
 
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/StandardControls/StandardControlStyles.xaml" />
-                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/CloseIconStyles.xaml" />
+                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Icons/StartIconStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/OkCancelWindowStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
@@ -51,7 +50,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </Window.Style>
 
     <customControls:OkCancelWindow.TitleIcon>
-        <customControls:GenericIcon Style="{StaticResource CloseIconStyle}" />
+        <customControls:GenericIcon Style="{StaticResource StartIconStyle}"/>
     </customControls:OkCancelWindow.TitleIcon>
 
     <Grid>
@@ -64,39 +63,55 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Label
+        <TextBlock
             Grid.Row="0"
             Grid.Column="0"
-            Content="_Actual Story Points:"
-            VerticalAlignment="Center"
-            Target="TextBoxActualStoryPoints" />
+            Text="Estimated Story Points:"
+            VerticalAlignment="Top" />
 
-        <TextBox
+        <TextBlock
             Grid.Row="0"
             Grid.Column="2"
-            x:Name="TextBoxActualStoryPoints"
-            Text="{Binding ActualStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
+            Text="{Binding EstimatedStoryPoints, StringFormat=standard}"
+            MinHeight="35"
+            VerticalAlignment="Center"
+            FontSize="20"/>
+
+        <Label
+            Grid.Row="1"
+            Grid.Column="0"
+            Content="_Commitment Story Points:"
+            VerticalAlignment="Center"
+            Target="TextBoxCommitmentStoryPoints" />
+
+        <TextBox
+            Grid.Row="1"
+            Grid.Column="2"
+            x:Name="TextBoxCommitmentStoryPoints"
+            Text="{Binding CommitmentStoryPoints, Converter={StaticResource StoryPointsToNumberConverter}}"
             TabIndex="1"
+            Margin="0 3 0 0"
             FontSize="20" />
 
         <Label
-            Grid.Row="1"
+            Grid.Row="2"
             Grid.Column="0"
-            Content="_Comments:"
+            Content="Sprint's _Goal:"
             VerticalAlignment="Center"
-            Target="TextBoxComments" />
+            Target="TextBoxSprintGoal" />
 
         <TextBox
-            Grid.Row="1"
+            Grid.Row="2"
             Grid.Column="2"
-            x:Name="TextBoxComments"
-            Text="{Binding Comments}"
+            x:Name="TextBoxSprintGoal"
+            Text="{Binding SprintGoal}"
+            TabIndex="2"
             Style="{StaticResource MultilineTextBoxStyle}"
-            Margin="0 20 0 0"
-            TabIndex="2" />
+            Margin="0 20 0 0" />
     </Grid>
 
 </customControls:OkCancelWindow>
