--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/ParagraphsBlockStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/ParagraphsBlockStyles.xaml
@@ -58,9 +58,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <TextBlock
-                        Text="{Binding}"
-                        TextWrapping="Wrap" />
+                    <ContentPresenter
+                        Content="{Binding}">
+
+                        <ContentPresenter.Resources>
+                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
+                                <Setter Property="TextWrapping" Value="Wrap" />
+                            </Style>
+                        </ContentPresenter.Resources>
+                    </ContentPresenter>
                 </DataTemplate>
             </Setter.Value>
         </Setter>
